--- a/public/biography/biography.css
+++ b/public/biography/biography.css
@@ -1,7 +1,15 @@
 .biography {
-  width: 400px;
+  width: 320px;
+  padding: 20px;
 }
-
-img {
+.biography a {
+  font-style: italic;
+}
+.biography img {
   float: left;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+#name {
+  font-weight: 900;
 }
