--- a/public/index.css
+++ b/public/index.css
@@ -29,7 +29,14 @@ footer {
   border: 1px dashed #999;
   padding: 1px 5px;
   color: #bbb;
+  font-size: 16px;
   text-decoration: none;
+}
+.header-top a:hover,
+.header-top a:active,
+#current-page {
+  background-color: #2b2b2b;
+  color: rgb(209, 166, 24);
 }
 .header-bottom {
   height: 71px;
@@ -46,5 +53,5 @@ footer {
 }
 .website-subtitle {
   font-style: italic;
-  padding-left: 5px;
+  padding-left: 8px;
 }
