--- a/public/paintings/still-life/still-life.css
+++ b/public/paintings/still-life/still-life.css
@@ -1,7 +1,36 @@
-#painting {
-  background-color: #000;
+#thumbs {
+  width: 482px;;
+  padding: 20px;
 }
-#painting img {
+#thumbs a {
+  text-decoration: none;
+}
+#thumbs h1 {
+  margin-bottom: 8px;
+}
+.thumb {
+  margin-bottom: 40px;
+  border: 1px solid #000;
+  padding: 10px 0;
+  background-color: #000;
+  color: #ddd;
+}
+.thumb span {
+  display: block;
+  width: max-content;
+  margin: 0 auto;
+  font-style: italic;
+  font-weight: 900;
+}
+.thumb img {
   display: block;
   margin: 0 auto;
+  padding-bottom: 4px;
+}
+.thumb:hover,
+.thumb:active {
+  color: rgb(209, 166, 24);
+  background-color: #2b2b2b;
+  cursor: pointer;
+  cursor: hand;
 }
