--- a/src/paintings/painting.css
+++ b/src/paintings/painting.css
@@ -1,5 +1,8 @@
+main {
+  background-color: #000;
+}
 #painting {
-  padding: 20px;
+  padding: 20px 0;
   background-color: #000;
 }
 #painting img {
