--- a/src/articles/article.css
+++ b/src/articles/article.css
@@ -2,3 +2,12 @@
   width: 320px;
   padding: 20px;
 }
+
+.lived {
+  font-style: italic;
+  font-size: 14px;
+}
+
+h1, h2, h3, h4, p {
+  padding-bottom: 10px;
+}
