--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ header {
 }
 main {
   background-color: #eee;
+  border-left: 20px solid;
+  border-image-source: url(images/wallpaper-tile.png);
+  border-image-slice: 23;
+  border-image-repeat: repeat;
 }
 footer {
   background-color: rgb(58, 28, 94);
